syntax = "proto3";

package clientes;

import "google/protobuf/empty.proto";

message ResponseHeader {
  string message = 1;
  int32 status = 2;
  bool success = 3;
}

message ClienteExisteRequest {
  string id = 1;
}

message ClienteExisteResponse {
  ResponseHeader header = 1;
  bool data = 2;
}

message NombreClienteRequest {
  string id = 1;
}

message NombreClienteResponse {
  ResponseHeader header = 1;
  string data = 2;
}

service ClientesPedidos {
  rpc ClienteExiste(ClienteExisteRequest) returns (ClienteExisteResponse) {}
  rpc NombreCliente(NombreClienteRequest) returns (NombreClienteResponse) {}
}